--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -151,4 +151,12 @@
         <item>25</item>
     </integer-array>
 
+    <!-- Dozing screen brightness -->
+    <integer name="config_screenBrightnessDoze">17</integer>
+
+    <!-- Ambient Display stuff -->
+    <string name="config_dozeComponent">com.android.systemui/com.android.systemui.doze.DozeService</string>
+    <bool name="config_powerDecoupleAutoSuspendModeFromDisplay">true</bool>
+    <bool name="config_powerDecoupleInteractiveModeFromDisplay">true</bool>
+
 </resources>
